--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -1978,12 +1978,12 @@ body.light hr.separator {
 .leader_box {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   margin-bottom: 10px;
   padding: 10px;
   background: rgba(0, 0, 0, 0.3) !important;
   border-radius: 10px;
   color: white !important;
+  /* align-items: center; */
 }
 
 .leader_box .left {
@@ -2042,26 +2042,28 @@ body.light hr.separator {
   display: flex;
   align-items: center;
   border-right: 1px solid #eee;
-  padding-right: 4em;
-  padding-left: 2em;
+  padding-right: 0em;
+  padding-left: 1em;
 }
 
 .match_history img {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   box-shadow: inset 0px 0px 4px 2px #c864f8;
   background: #1f0644;
   padding: 10px;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .match_history .match_content {
-  padding: 0em 4em;
+  padding: 0em 1em;
 }
 
 .match_history .match_content .victory {
   color: #44cb49;
+  font-size: 1rem;
+
 }
 
 .match_history .match_content .defeat {
@@ -2071,6 +2073,7 @@ body.light hr.separator {
 .match_history .match_content h3 {
   color: #fff;
   font-weight: 700;
+  font-size:1rem;
 }
 
 .match_right {
@@ -2078,6 +2081,8 @@ body.light hr.separator {
   align-content: center;
   justify-content: center;
   align-items: center;
+  margin-left: 1rem;
+
 }
 
 .match_right img {
@@ -2101,7 +2106,7 @@ body.light hr.separator {
 }
 
 .match_box {
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
 .box_channel {
@@ -2127,7 +2132,27 @@ body.light hr.separator {
   width: 10rem;
   height: 10rem;
 }
-
+.side h2{
+  font-size: 0.9rem;
+}
+.fa_factor{
+  background: #eeeeee45;
+  display: flex;
+  padding: 1rem;
+  justify-content: space-evenly;
+}
+.fa_factor img{
+  width: 150px;
+  margin-left: 1rem;
+}
+.verify_factor{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
 @media (max-width: 768px) {
   .change_name_input {
     padding: 1em 0em 1em 1em;
@@ -2143,7 +2168,7 @@ body.light hr.separator {
   }
 
   .dashboard_main {
-    padding: 60px 1em 60px;
+    padding: 10px 1em 60px;
   }
 
   .btn-friends {
@@ -2183,11 +2208,70 @@ body.light hr.separator {
   }
 
   .match_right {
-    margin-top: 1.5em;
-    margin-left: 3em;
+    margin-top: 0em;
+    margin-left: 1em;
+    margin-bottom: 0.5rem;
   }
 
   .match_right img {
     margin-right: 1em;
+  }
+  .leader_box .left {
+    margin-top: 1rem;
+}
+  .main{
+    top:5rem
+  }
+  .side h2{
+    display: none!important;
+  }
+  .side span{
+    position:relative;
+    top:0;
+  }
+  .side{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .side .btn_title{
+    font-size: 1.3rem!important;
+    width: 22%!important;
+    height: 3rem;
+    text-align: center!important;
+  }
+  .friends_buttons a{
+    font-size: 0.8rem!important;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .friend_actions .friend_action {
+    margin-right: 1em;
+  }
+  .overlay{
+    padding: 10px!important;
+  }
+  .avatar_profile{
+    text-align: center;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  .avatar_profile img{
+    width: 100px;
+  }
+  .avatar_profile span{
+    font-size: 1rem;
+  }
+  .leader_box{
+    flex-wrap: wrap;
+  }
+  .fa_factor{
+    flex-wrap: wrap;
+  }
+  .verify_factor .change_name_input{
+    margin-bottom: 1rem;
   }
 }
