--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -1,8 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Coda&display=swap");
+
+@font-face {
+  font-family: "Merienda";
+  src: local("Merienda"),
+    url(../fonts/BeatWorddemo.ttf) format("truetype");
+}
+* {
+  font-family: "Merienda";
+}
 html {
   overflow-x: hidden;
   height: 100%;
 }
-
+.main {
+  height: 30em;
+}
 body {
   font-family: "Rajdhani", sans-serif;
   font-size: 15px;
