--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -2220,6 +2220,9 @@ body.light hr.separator {
   position: relative;
   top: 0.3rem;
 }
+.avatar_profile img{
+  width:100px;
+}
 @media (max-width: 768px) {
   .change_name_input {
     padding: 1em 0em 1em 1em;
