--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -2222,6 +2222,8 @@ body.light hr.separator {
 }
 .avatar_profile img{
   width:100px;
+  border-radius: 50%;
+  height: 6rem;
 }
 @media (max-width: 768px) {
   .change_name_input {
