--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -2246,6 +2246,19 @@ body.light hr.separator {
   border: 4px solid #a70aed;
   background: #a90bec;
 }
+.btn-messages{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.btn-messages a{
+  margin: 0.3rem!important;
+}
+.mute-message{
+  display: flex;
+}
 @media (max-width: 768px) {
   .change_name_input {
     padding: 1em 0em 1em 1em;
