chat working smoooth

--- a/src/client/public/assets/css/style.css
+++ b/src/client/public/assets/css/style.css
@@ -1,13 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Coda&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+
 @font-face {
-  font-family: "Merienda";
   src: local("Merienda"), url(../fonts/BeatWorddemo.ttf) format("truetype");
 }
 * {
-  font-family: "Merienda";
+  font-family: "Quicksand";
   /* font-family: "Coda"; */
 }
+
 html {
   overflow-x: hidden;
   height: 100%;
