--- a/srcs/client/public/assets/css/style.css
+++ b/srcs/client/public/assets/css/style.css
@@ -2276,6 +2276,8 @@ body.light hr.separator {
 .leader_board img {
   width: 3rem;
   border-radius: 50%;
+  height: 3rem;
+  object-fit: cover;
 }
 .leader_board h4 {
   margin-left: 1rem;
